--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "webpack-watch": "webpack -d --watch",
     "express-server": "nodemon server",
-    "dev": "concurrent --kill-others \"npm run webpack-watch\" \"npm run express-server\"",
+    "dev": "concurrently --kill-others \"yarn run webpack-watch\" \"yarn run express-server\"",
+    "build": "yarn run webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,49 +16,56 @@
   "author": "Rebecca Vest",
   "license": "ISC",
   "dependencies": {
-    "apollo-boost": "^0.1.10",
-    "apollo-server-express": "^1.3.6",
+    "@babel/core": "^7.1.5",
+    "@babel/plugin-transform-runtime": "^7.1.0",
+    "@babel/preset-env": "^7.1.5",
+    "@babel/register": "^7.0.0",
+    "@babel/runtime": "^7.1.2",
+    "apollo-boost": "^0.1.18",
+    "apollo-client": "^2.4.4",
     "awesome-notifications": "^2.2.9",
     "axios": "^0.18.0",
+    "babel-register": "^6.26.0",
     "body-parser": "^1.18.3",
     "classnames": "^2.2.6",
     "cookie-parser": "^1.4.3",
-    "dot-env": "0.0.1",
+    "dataloader-sequelize": "^1.7.5",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
-    "fela": "^6.1.8",
-    "fela-logger": "^5.0.21",
-    "fela-plugin-extend": "^6.0.6",
-    "fela-plugin-logger": "^5.0.5",
-    "fela-plugin-named-media-query": "^5.0.13",
-    "fela-tools": "^5.1.6",
-    "graphql": "^0.13.2",
-    "graphql-tag": "^2.9.2",
-    "graphql-tools": "^3.0.2",
+    "express-graphql": "^0.7.1",
+    "fela": "^6.2.3",
+    "formik": "^1.3.1",
+    "graphql": "14",
+    "graphql-tag": "^2.10.0",
+    "graphql-tools": "^4.0.2",
     "graphql-tools-types": "^1.1.21",
+    "lodash": "^4.17.10",
     "merge-graphql-schemas": "^1.5.1",
-    "pg": "^7.4.3",
+    "morgan": "^1.9.1",
+    "pg": "6.4.2",
     "prop-types": "^15.6.1",
-    "react": "^16.4.1",
-    "react-apollo": "^2.1.6",
-    "react-dom": "^16.4.1",
+    "react": "^16.6.0",
+    "react-apollo": "^2.2.4",
+    "react-dom": "^16.6.0",
     "react-facebook": "^5.0.3",
-    "react-fela": "^7.3.0",
+    "react-facebook-login": "^4.0.1",
+    "react-fela": "^8.0.4",
     "react-router-dom": "^4.2.2",
     "react-router-prop-types": "^1.0.4",
-    "sequelize": "^4.37.7",
+    "sequelize": "4",
+    "sequelize-cli": "4",
     "sequelize-heroku": "^2.0.0",
-    "uuid": "^3.2.1"
+    "uuid": "^3.3.2",
+    "xml2js": "^0.4.19"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
+    "@babel/cli": "^7.1.2",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.0.0",
+    "@babel/runtime": "^7.1.2",
     "babel-eslint": "^8.2.5",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "babel-register": "^6.26.0",
+    "babel-loader": "^8.0.4",
     "concurrently": "^3.5.1",
     "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
@@ -66,10 +74,11 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.8.2",
     "nodemon": "^1.17.4",
-    "sequelize-cli": "^4.0.0",
+    "sequelize-auto": "^0.4.29",
+    "sequelize-migration-generator": "^0.1.0",
     "sqlite3": "^4.0.1",
     "style-loader": "^0.21.0",
     "webpack": "^4.8.3",
-    "webpack-cli": "^2.1.3"
+    "webpack-cli": "^3.1.2"
   }
 }
