--- a/app/.babelrc
+++ b/app/.babelrc
@@ -1,13 +1,15 @@
 {
   "presets": [
-    ["env", {
-      "targets": {
-        "browsers": ["last 1 version", "not dead", "> 1%"]
+    [
+      "@babel/preset-env",
+      {
+        "targets": {
+          "browsers": ["last 1 version", "not dead", "> 1%"]
+        }
       }
-    }],
-    "stage-2",
-    "react"
+    ],
+    "@babel/preset-react"
   ],
-  "plugins": ["transform-runtime"],
-  "sourceMaps": true,
+  "plugins": ["@babel/transform-runtime", "@babel/plugin-proposal-class-properties"],
+  "sourceMaps": true
 }
