--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "qik-poll",
+  "name": "pin-pics",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "webpack-watch": "webpack -d --watch",
-    "express-server": "nodemon server",
-    "dev": "concurrently --kill-others \"yarn run webpack-watch\" \"yarn run express-server\"",
-    "build": "yarn run webpack --mode production",
+    "start": "node ./index.js",
+    "dev": "nodemon ./index.js",
+    "db:migrate": "yarn sequelize db:migrate --config ./server/db/config/config.json --migrations-path ./server/db/migrations --models-path ./server/db/models",
+    "create:migration": "yarn sequelize migration:generate --config ./server/db/config/config.json --migrations-path ./server/db/migrations --models-path ./sever/db/models",
+    "db:migrate:undo": "yarn sequelize db:migrate:undo --config ./server/db/config/config.json --migrations-path ./server/db/migrations --models-path ./server/db/models",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -16,69 +17,36 @@
   "author": "Rebecca Vest",
   "license": "ISC",
   "dependencies": {
-    "@babel/core": "^7.1.5",
-    "@babel/plugin-transform-runtime": "^7.1.0",
-    "@babel/preset-env": "^7.1.5",
-    "@babel/register": "^7.0.0",
-    "@babel/runtime": "^7.1.2",
-    "apollo-boost": "^0.1.18",
-    "apollo-client": "^2.4.4",
-    "awesome-notifications": "^2.2.9",
-    "axios": "^0.18.0",
-    "babel-register": "^6.26.0",
+    "apollo-server-express": "^1.3.6",
+    "axios": "^0.19.0",
     "body-parser": "^1.18.3",
-    "classnames": "^2.2.6",
-    "cookie-parser": "^1.4.3",
+    "cookie-parser": "^1.4.4",
     "dataloader-sequelize": "^1.7.5",
+    "dayjs": "^1.7.4",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
-    "express-graphql": "^0.7.1",
-    "fela": "^6.2.3",
-    "formik": "^1.3.1",
-    "graphql": "14",
+    "graphql": "^0.13.2",
     "graphql-tag": "^2.10.0",
+    "graphql-tag-pluck": "^0.8.6",
     "graphql-tools": "^4.0.2",
     "graphql-tools-types": "^1.1.21",
     "lodash": "^4.17.10",
     "merge-graphql-schemas": "^1.5.1",
     "morgan": "^1.9.1",
     "pg": "6.4.2",
-    "prop-types": "^15.6.1",
-    "react": "^16.6.0",
-    "react-apollo": "^2.2.4",
-    "react-dom": "^16.6.0",
-    "react-facebook": "^5.0.3",
-    "react-facebook-login": "^4.0.1",
-    "react-fela": "^8.0.4",
-    "react-router-dom": "^4.2.2",
-    "react-router-prop-types": "^1.0.4",
-    "sequelize": "5.15.1",
-    "sequelize-cli": "5.5.0",
+    "rollbar": "^2.14.0",
+    "sequelize": "^4.44.3",
+    "sequelize-cli": "^4.1.1",
     "sequelize-heroku": "^2.0.0",
     "uuid": "^3.3.2",
     "xml2js": "^0.4.19"
   },
   "devDependencies": {
-    "@babel/cli": "^7.1.2",
-    "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/register": "^7.0.0",
-    "@babel/runtime": "^7.1.2",
-    "babel-eslint": "^8.2.5",
-    "babel-loader": "^8.0.4",
-    "concurrently": "^3.5.1",
-    "css-loader": "^0.28.11",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.11.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.8.2",
+    "eslint": "^6.6.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2",
     "nodemon": "^1.17.4",
     "sequelize-auto": "^0.4.29",
-    "sequelize-migration-generator": "^0.1.0",
-    "sqlite3": "^4.0.1",
-    "style-loader": "^0.21.0",
-    "webpack": "^4.8.3",
-    "webpack-cli": "^3.1.2"
+    "sequelize-migration-generator": "^0.1.0"
   }
 }
