--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,32 @@
-node_modules
-localhost.cert
-localhost.key
-yarn.lock
-localhost.cert
-.DS_STORE
-.env
-.cache
-public/report.html
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
+.DS_Store
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# local env files
+.env*.local
+
+# vercel
+.vercel
