--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,8 @@
       }],
       "react/sort-comp": 0,
       "react/state-in-constructor": "warn",
-      "react/prop-types": "warn"
+      "react/prop-types": "warn",
+      "react/jsx-filename-extension": "off"
     },
     "settings": {
       "react": {
