--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "db:migrate": "yarn sequelize db:migrate --config ./server/db/config/config.json --migrations-path ./server/db/migrations --models-path ./server/db/models",
+    "db:migrate": "dotenv -- yarn sequelize db:migrate --env production --config ./server/db/config/config.json --migrations-path ./server/db/migrations --models-path ./server/db/models",
     "create:migration": "yarn sequelize migration:generate --config ./server/db/config/config.json --migrations-path ./server/db/migrations --models-path ./sever/db/models",
     "db:migrate:undo": "yarn sequelize db:migrate:undo --config ./server/db/config/config.json --migrations-path ./server/db/migrations --models-path ./server/db/models",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -19,22 +19,37 @@
   "author": "Rebecca Vest",
   "license": "ISC",
   "dependencies": {
-    "bootstrap": "4.6.0",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-brands-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@next-auth/sequelize-adapter": "^1.0.7",
+    "@popperjs/core": "^2.11.6",
+    "bootstrap": "^5.2.3",
     "classnames": "2.3.2",
-    "eslint": "8.30.0",
-    "eslint-config-next": "13.1.0",
-    "jquery": "1.9.1",
+    "dataloader-sequelize": "^2.3.3",
+    "formik": "^2.2.9",
+    "graphql": "^16.6.0",
     "next": "13.1.0",
-    "popper.js": "^1.16.1",
+    "next-auth": "^4.18.7",
+    "next-urql": "^4.0.2",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
-    "react-bootstrap": "1.6.6",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-is": "^18.2.0",
+    "sequelize-cockroachdb": "^6.0.5",
+    "urql": "^3.0.3",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "dotenv-cli": "^6.0.0",
+    "eslint": "8.30.0",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-next": "13.1.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.31.11",
-    "eslint-plugin-react-hooks": "^4.3.0"
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "sequelize": "^6.28.0",
+    "sequelize-cli": "^6.5.2"
   }
 }
