--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
     "classnames": "2.3.2",
-    "dataloader-sequelize": "^2.3.3",
     "formik": "^2.2.9",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
@@ -38,8 +37,7 @@
     "react-dom": "18.2.0",
     "react-is": "^18.2.0",
     "sequelize-cockroachdb": "^6.0.5",
-    "urql": "^3.0.3",
-    "uuid": "^9.0.0"
+    "urql": "^3.0.3"
   },
   "devDependencies": {
     "dotenv-cli": "^6.0.0",
@@ -51,6 +49,8 @@
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.3.0",
     "sequelize": "^6.28.0",
-    "sequelize-cli": "^6.5.2"
+    "sequelize-auto": "^0.8.8",
+    "sequelize-cli": "^6.5.2",
+    "sequelize-migration-generator": "^0.1.0"
   }
 }
