--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@next-auth/sequelize-adapter": "^1.0.7",
     "@popperjs/core": "^2.11.6",
@@ -29,6 +30,7 @@
     "formik": "^2.2.9",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
+    "masonry-layout": "^4.2.2",
     "next": "13.1.0",
     "next-auth": "^4.18.7",
     "next-urql": "^4.0.2",
