--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@next-auth/sequelize-adapter": "^1.0.7",
-    "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
     "classnames": "2.3.2",
     "formik": "^2.2.9",
@@ -36,6 +35,7 @@
     "next-urql": "^4.0.2",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "18.2.0",
     "react-is": "^18.2.0",
     "sequelize-cockroachdb": "^6.0.5",
