--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "db:migrate": "NODE_ENV=development dotenv -- yarn sequelize db:migrate --env development --config ./server/db/config/config.json --migrations-path ./server/db/migrations --models-path ./server/db/models",
+    "db:migrate": "dotenv -e .env.production.local -- yarn sequelize db:migrate --env production --config ./server/db/config/config.json --migrations-path ./server/db/migrations --models-path ./server/db/models",
     "create:migration": "yarn sequelize migration:generate --config ./server/db/config/config.json --migrations-path ./server/db/migrations --models-path ./sever/db/models",
     "db:migrate:undo": "yarn sequelize db:migrate:undo --config ./server/db/config/config.json --migrations-path ./server/db/migrations --models-path ./server/db/models",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -24,6 +24,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@next-auth/sequelize-adapter": "^1.0.7",
+    "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
     "classnames": "2.3.2",
     "formik": "^2.2.9",
