--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node ./index.js",
-    "dev": "nodemon ./index.js",
-    "db:migrate": "yarn sequelize db:migrate --config ./server/db/config/config.json --migrations-path ./server/db/migrations --models-path ./server/db/models",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "db:migrate": "dotenv -e .env.production.local -- yarn sequelize db:migrate --env production --config ./server/db/config/config.json --migrations-path ./server/db/migrations --models-path ./server/db/models",
     "create:migration": "yarn sequelize migration:generate --config ./server/db/config/config.json --migrations-path ./server/db/migrations --models-path ./sever/db/models",
     "db:migrate:undo": "yarn sequelize db:migrate:undo --config ./server/db/config/config.json --migrations-path ./server/db/migrations --models-path ./server/db/models",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,36 +19,41 @@
   "author": "Rebecca Vest",
   "license": "ISC",
   "dependencies": {
-    "apollo-server-express": "^1.3.6",
-    "axios": "^0.19.0",
-    "body-parser": "^1.18.3",
-    "cookie-parser": "^1.4.4",
-    "dataloader-sequelize": "^1.7.5",
-    "dayjs": "^1.7.4",
-    "dotenv": "^5.0.1",
-    "express": "^4.16.3",
-    "graphql": "^0.13.2",
-    "graphql-tag": "^2.10.0",
-    "graphql-tag-pluck": "^0.8.6",
-    "graphql-tools": "^4.0.2",
-    "graphql-tools-types": "^1.1.21",
-    "lodash": "^4.17.10",
-    "merge-graphql-schemas": "^1.5.1",
-    "morgan": "^1.9.1",
-    "pg": "6.4.2",
-    "rollbar": "^2.14.0",
-    "sequelize": "^4.44.3",
-    "sequelize-cli": "^4.1.1",
-    "sequelize-heroku": "^2.0.0",
-    "uuid": "^3.3.2",
-    "xml2js": "^0.4.19"
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-brands-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@next-auth/sequelize-adapter": "^1.0.7",
+    "@popperjs/core": "^2.11.6",
+    "bootstrap": "^5.2.3",
+    "classnames": "2.3.2",
+    "formik": "^2.2.9",
+    "graphql": "^16.6.0",
+    "graphql-tag": "^2.12.6",
+    "masonry-layout": "^4.2.2",
+    "next": "13.1.0",
+    "next-auth": "^4.18.7",
+    "next-urql": "^4.0.2",
+    "prop-types": "^15.8.1",
+    "react": "18.2.0",
+    "react-bootstrap": "^2.7.0",
+    "react-dom": "18.2.0",
+    "react-is": "^18.2.0",
+    "sequelize-cockroachdb": "^6.0.5",
+    "urql": "^3.0.3"
   },
   "devDependencies": {
-    "eslint": "^6.6.0",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.18.2",
-    "nodemon": "^1.17.4",
-    "sequelize-auto": "^0.4.29",
+    "dotenv-cli": "^6.0.0",
+    "eslint": "8.30.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-next": "13.1.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "sequelize": "^6.28.0",
+    "sequelize-auto": "^0.8.8",
+    "sequelize-cli": "^6.5.2",
     "sequelize-migration-generator": "^0.1.0"
   }
 }
